--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -50,6 +50,12 @@
                size="5">
         <span class="label-like">left, top</span>
         <br>
+        <label for="travel-group">Travel Group:</label>
+        <input type="text"
+               id="travel-group"
+               name="travel_group"
+               value="{{ current.travel_group }}"> <span class="label-like">For multiple companions</span>
+        <br>
         <div id="attrib-container" class="outer-border">
             <table id="attrib-table" style="display: none;">
                 <thead>
@@ -97,19 +103,25 @@
                 </tbody>
             </table>
             <div>
-                {% if game_data.items %}
+                {% set outerscope = namespace(other_items=[]) %}
+                {% for other_item in game_data.items
+                    if other_item.storage_type == 'carried'
+                    and other_item.id not in current.items %}
+                    {% set _ = outerscope.other_items.append(other_item) %}
+                {% endfor %}
+                {% if outerscope.other_items %}
                     <!-- Select box for adding another source -->
                     <div class="select-box">
                         <select class="item-select" name="item_select">
                             <option value="" selected>(Select item)</option>
-                            {% for item in game_data.items if item.id not in current.items %}
+                            {% for item in outerscope.other_items %}
                                 <option value="{{ item.id }}">{{ item.name }}</option>
                             {% endfor %}
                         </select>
                         <button type="button" class="add-item-btn lesser-button">Add Item</button>
                     </div>
                 {% else %}
-                    <p class="no-entities">(No items)</p>
+                    <p class="no-entities">(No other items can be carried)</p>
                 {% endif %}
             </div>
         </div>
