--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -100,19 +100,25 @@
                 </tbody>
             </table>
             <div>
-                {% if game_data.items %}
+                {% set outerscope = namespace(other_items=[]) %}
+                {% for other_item in game_data.items
+                    if other_item.storage_type == 'local'
+                    and other_item.id not in current.items %}
+                    {% set _ = outerscope.other_items.append(other_item) %}
+                {% endfor %}
+                {% if outerscope.other_items %}
                     <!-- Select box for adding another source -->
                     <div class="select-box">
                         <select class="item-select">
                             <option value="" selected>(Select item)</option>
-                            {% for item in game_data.items %}
-                                {% if item.id not in current.items %}<option value="{{ item.id }}">{{ item.name }}</option>{% endif %}
+                            {% for item in outerscope.other_items %}
+                                <option value="{{ item.id }}">{{ item.name }}</option>
                             {% endfor %}
                         </select>
                         <button type="button" class="add-item-btn lesser-button">Add Item</button>
                     </div>
                 {% else %}
-                    <p class="no-entities">(No other items)</p>
+                    <p class="no-entities">(No other local items)</p>
                 {% endif %}
             </div>
         </div>
